# aipet_llm_api

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  TODO.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  test.py
.claude/: settings.json
.claude/agents/: qa-test-improver.md
.github/workflows/: ci.yml  deploy-ui.yml  deploy.yml  test.yml
data/: game_dataset.parquet
data/game_dataset/: dataset_info.json  state.json
docs/: blog-post-notes.md  cicd-runner-setup.md  complete.md  plan.md  prd.md
docs/superpowers/plans/: 2026-05-13-auth0-authentication.md  2026-05-13-authentication-and-authorisation.md  2026-05-13-epic3-cicd.md  2026-05-19-typescript-frontend.md
docs/superpowers/specs/: 2026-05-13-auth0-authentication-design.md  2026-05-19-typescript-frontend-design.md
infra/: setup.sh
infra/k8s/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  temporal-server.yaml  temporal-worker-deployment.yaml
infra/k8s/aipet-llm/: aipet-db.secret.example.yaml  aipet-secrets.secret.example.yaml  deployment.yaml  ecr-cred-refresh.yaml  hpa.yaml  ingress.yaml  network-policy.yaml  postgres.yaml
infra/k8s/cluster/: cluster-issuer.yaml
infra/k8s/temporal/: ingress.yaml  server.yaml  temporal-ui-auth.secret.example.yaml  worker.yaml
infra/terraform/: .terraform.tfstate.lock.info  aipet_user.tf  dns.tf  github_actions.tf  main.tf  moved.tf  outputs.tf  variables.tf  versions.tf
infra/terraform/bootstrap/: main.tf  terraform.tfstate
scripts/: __init__.py  evaluate.py  export.py  generate_dataset.py  set_github_secrets.sh  smoke_test.py  smoke_test.sh  train.py  update_aws_env.py
src/: dataset.py  train.py
src/adapters/: __init__.py  inference.py  kaggle_adapter.py  notebook_template.ipynb  ssh_adapter.py
src/adapters/auth/: auth0.py  auth0_management.py  fake.py
src/adapters/colab/: __init__.py
src/adapters/compute/: ssh.py
src/adapters/database/: __init__.py  crud.py  engine.py  model_store.py  run_store.py  user_store.py
src/adapters/kaggle/: __init__.py  adapter.py  notebook_template.ipynb
src/adapters/storage/: __init__.py  s3.py
src/api/: app.py  routes.py  training_routes.py
src/cli/: evaluate.py  export.py  generate_dataset.py  infer.py  run_notebook_local.py  train.py  trigger_training.py
src/domain/: actions.py  models.py  ports.py
src/domain/train/: config.py  dataset.py  evaluate.py  export.py  quality_report.py  trainer.py
src/infrastructure/: inference.py  model_store.py  prompt.py
src/temporal/: activities.py  worker.py  workflows.py
tests/cli/: test_cli.py
tests/e2e/: conftest.py  test_inference_behaviour.py  test_kaggle_e2e.py  test_model_quality.py  test_runpod_e2e.py  test_vastai_e2e.py
tests/integration/: conftest.py  test_api.py  test_approval.py  test_auth.py  test_crud_repository.py  test_kaggle_e2e.py  test_model_quality.py  test_model_workflow_integration.py  test_real_inference.py  test_run_api.py  test_temporal_pipeline_e2e.py  test_train_cli.py  test_training_api.py
tests/unit/: conftest.py  test_approval_dependency.py  test_auth0_adapter.py  test_auth0_management.py  test_auth_dependency.py  test_cli.py  test_dataset.py  test_inference.py  test_models.py  test_ports.py  test_prompt.py  test_remote_adapters.py  test_run_store.py  test_runpod_adapter.py  test_runpod_training_script.py  test_s3_storage.py  test_s3_storage_adapter.py  test_storage_port.py  test_temporal_activities.py  test_temporal_workflow.py  test_trainer.py  test_user_store.py  test_vastai_adapter.py
ui/: .env.local.example  README.md  index.html  package-lock.json  package.json
ui/src/: App.tsx  index.css  main.tsx
(+116 files in other folders)
