[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "aipet-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "llama-cpp-python>=0.3.22",
    "pydantic>=2.13.3",
    "temporalio>=1.27.0",
    "uvicorn>=0.46.0",
    "datasets>=4.8.5",
    "transformers>=5.7.0",
    "torch>=2.0",
    "accelerate>=1.1.0",
    "bitsandbytes>=0.43.0",
    "peft>=0.9.0",
    "sentencepiece>=0.2.0",
    "kaggle>=1.6",
    "google-auth>=2.0",
    "google-api-python-client>=2.0",
    "google-auth-httplib2>=0.2",
    "sqlalchemy>=2.0.49",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
