[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "aipet-llm-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
    "PyJWT[cryptography]>=2.8",
    "temporalio>=1.27.0",
    "uvicorn>=0.46.0",
    "datasets>=4.8.5",
    "transformers>=5.7.0",
    "torch>=2.5",
    "accelerate>=1.1.0",
    "bitsandbytes>=0.43.0",
    "peft>=0.9.0",
    "sentencepiece>=0.2.0",
    "kaggle>=1.6",
    "boto3>=1.35",
    "runpod>=1.7",
    "vastai>=1.0",
    "sqlalchemy>=2.0.49",
    "alembic>=1.18.4",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
inference = [
    # Requires C++ compilation — install locally for RPi inference, not on training instances.
    "llama-cpp-python>=0.3.22",
]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.0.0",
]

[dependency-groups]
dev = [
    "types-tqdm>=4.67.3.20260508",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-n auto --dist=loadfile"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)-8s %(name)s  %(message)s"
log_cli_date_format = "%H:%M:%S"
markers = [
    "slow: marks tests as slow — downloads models, trains, exports (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require a CUDA GPU (skip on CPU/MPS machines)",
    "kaggle: marks tests that submit real Kaggle kernels (requires KAGGLE_USERNAME + KAGGLE_KEY or KAGGLE_API_TOKEN)",
    "runpod: marks tests that provision real RunPod pods (requires RUNPOD_API_KEY + AWS credentials)",
    "vastai: marks tests that rent real Vast.ai instances (requires VAST_API_KEY + AWS credentials)",
]
